--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
+    <link rel="shortcut icon" href="image/head.png" >
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -20,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#"><img src="image/logo.png" class="logo"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,8 +54,8 @@
       <div class="slide-1"></div>
       <div class="hero">
         <hgroup>
-            <h1>We are creative</h1>        
-            <h3>Get start your next awesome project</h3>
+            <h1><img src="image/logo.png"></h1>        
+            <h3>Kibandaski finder. Your Number 1 local food store locator</h3>
         </hgroup>
         <button class="btn btn-hero btn-lg" role="button">See all features</button>
       </div>
@@ -112,12 +113,32 @@
                     <img src="image/madondo.jpg" class="img">
                 </div>
                 <div class="col-md-6">
-                    <p class="pp">lkjklhjk</p>
+                    <h3 class="pp">Chapo Madondo</h3>
+                    <h4 class="ppp">Price: Kes100/=</h4>
                 </div>
+            </div>
+            <div class="col-md-6">
+                
             </div>
         </div>
     </div>
 </div>
+<footer class="marg">
+   <div id="footer">
+      <div class="container">
+        <div class="col-md-6">
+         <p class="muted credit">Made With <i class="fa fa-heart"></i> by kibandaski team</p>
+        </div>
+        <div class="col-md-6">
+            <ul class="list-inline text-center">
+                <li><a href="#"><i class="fa fa-facebook fa-2x m"></i></a></li>
+                 <li><a href="#"><i class="fa fa-twitter fa-2x m"></i></a></li>
+                  <li><a href="#"><i class="fa fa-github fa-2x m"></i></a></li>
+            </ul>
+        </div>
+      </div>
+</div>
+</footer>
 <br/>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
