--- a/index.html
+++ b/index.html
@@ -54,30 +54,30 @@
       <div class="slide-1"></div>
       <div class="hero">
         <hgroup>
-            <h1><img src="image/logo.png"></h1>        
+            <h1><img src="image/logo.png" class="ii"></h1>        
             <h3>Kibandaski finder. Your Number 1 local food store locator</h3>
         </hgroup>
-        <button class="btn btn-hero btn-lg" role="button">See all features</button>
+        <button class="btn btn-hero btn-lg" role="button">Find your nearest Kibanda</button>
       </div>
     </div>
     <div class="item slides">
       <div class="slide-2"></div>
       <div class="hero">        
         <hgroup>
-            <h1>We are smart</h1>        
-            <h3>Get start your next awesome project</h3>
+             <h5><img src="image/saver.png" class="ii"></h5>       
+            <h3>Save your daily hustle.</h3>
         </hgroup>       
-        <button class="btn btn-hero btn-lg" role="button">See all features</button>
+        <button class="btn btn-hero btn-lg" role="button">Find your nearest Kibanda</button>
       </div>
     </div>
     <div class="item slides">
       <div class="slide-3"></div>
       <div class="hero">        
         <hgroup>
-            <h1>We are amazing</h1>        
-            <h3>Get start your next awesome project</h3>
+            <h5><img src="image/rates.png" class="ii"></h5>         
+            <h3>Get best places according to customer reviews</h3>
         </hgroup>
-        <button class="btn btn-hero btn-lg" role="button">See all features</button>
+        <button class="btn btn-hero btn-lg" role="button">Find your nearest Kibanda</button>
       </div>
     </div>
   </div> 
