--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -46,40 +46,40 @@
     <li data-target="#bs-carousel" data-slide-to="1"></li>
     <li data-target="#bs-carousel" data-slide-to="2"></li>
   </ol>
-  
+
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item slides active">
       <div class="slide-1"></div>
       <div class="hero">
         <hgroup>
-            <h1>We are creative</h1>        
+            <h1>We are creative</h1>
             <h3>Get start your next awesome project</h3>
         </hgroup>
-        <button class="btn btn-hero btn-lg" role="button">See all features</button>
+        <button class="btn btn-hero btn-lg" role="button"><a href="maps.html">See all features</a></button>
       </div>
     </div>
     <div class="item slides">
       <div class="slide-2"></div>
-      <div class="hero">        
+      <div class="hero">
         <hgroup>
-            <h1>We are smart</h1>        
+            <h1>We are smart</h1>
             <h3>Get start your next awesome project</h3>
-        </hgroup>       
+        </hgroup>
         <button class="btn btn-hero btn-lg" role="button">See all features</button>
       </div>
     </div>
     <div class="item slides">
       <div class="slide-3"></div>
-      <div class="hero">        
+      <div class="hero">
         <hgroup>
-            <h1>We are amazing</h1>        
+            <h1>We are amazing</h1>
             <h3>Get start your next awesome project</h3>
         </hgroup>
         <button class="btn btn-hero btn-lg" role="button">See all features</button>
       </div>
     </div>
-  </div> 
+  </div>
 </div>
 <!--About us-->
 <div class="container-fluid">
@@ -87,7 +87,7 @@
         <br/>
         <br/>
         <div class="col-md-12">
-            
+
             <div class="col-md-6">
                 <h1 class="ab">About Us</h1>
             </div>
