added more markers

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
     </div>
 </div>
 <br/>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1ENv0vQTNyhcmIOxOewI-NlizlAis48A&callback=initMap">
+</script>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/scripts.js"></script>
