--- a/maps.html
+++ b/maps.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <h2>kibanda maps</h2>
+    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
     <div id="mapCanvas">
 
     </div>
-    <scripts src="js/scripts.js" charset="utf-8"></script>
+    <script src="js/scripts.js" charset="utf-8"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1ENv0vQTNyhcmIOxOewI-NlizlAis48A&callback=initMap">
     </script>
