styling the maps page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#" class="trans"> Home</a></li>
         <li><a href="#" class="trans">Gallery</a></li>
-        <li><a href="#" class="trans">Featured Vibandas</a></li>
+        <li><a href="maps.html" class="trans">Featured Vibandas</a></li>
         <li><a href="#" class="trans">Our Team</a></li>
         <li><a href="#" class="trans">Contact Us</a></li>
       </ul>
