added icons to the maps page

--- a/maps.html
+++ b/maps.html
@@ -5,6 +5,7 @@
     <title>Maps</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main2.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
   </head>
   <body>
