--- a/maps.html
+++ b/maps.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main2.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
+    <link rel="shortcut icon" href="image/head.png" >
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -40,6 +41,23 @@
     <div id="mapCanvas">
 
     </div>
+    <footer class="marg">
+       <div id="footer">
+          <div class="container">
+            <div class="col-md-6">
+             <p class="muted credit">Made With <i class="fa fa-heart"></i> by kibandaski team</p>
+            </div>
+            <div class="col-md-6">
+                <ul class="list-inline text-center">
+                    <li><a href="#"><i class="fa fa-facebook fa-2x m"></i></a></li>
+                     <li><a href="#"><i class="fa fa-twitter fa-2x m"></i></a></li>
+                      <li><a href="#"><i class="fa fa-github fa-2x m"></i></a></li>
+                </ul>
+            </div>
+          </div>
+    </div>
+    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js" charset="utf-8"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1ENv0vQTNyhcmIOxOewI-NlizlAis48A&callback=initMap">
