--- a/maps.html
+++ b/maps.html
@@ -37,9 +37,13 @@
     </nav>
 
     <h2 id="kMaps">kibandaski  maps</h2>
-    <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-    <div id="mapCanvas">
-
+    <input id="pac-input" class="controls" type="text"
+        placeholder="Enter a location">
+    <div id="mapCanvas"></div>
+    <div id="infowindow-content">
+      <span id="place-name"  class="title"></span><br>
+      Place ID <span id="place-id"></span><br>
+      <span id="place-address"></span>
     </div>
     <footer class="marg">
        <div id="footer">
@@ -59,8 +63,7 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js" charset="utf-8"></script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1ENv0vQTNyhcmIOxOewI-NlizlAis48A&callback=initMap">
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1ENv0vQTNyhcmIOxOewI-NlizlAis48A&libraries=places&callback=initMap"
+        async defer></script>
   </body>
 </html>
