--- a/maps.html
+++ b/maps.html
@@ -37,12 +37,12 @@
     </nav>
 
     <h2 id="kMaps">kibandaski  maps</h2>
-    <input id="pac-input" class="controls" type="text"
-        placeholder="Enter a location">
-    <div id="mapCanvas"></div>
+    <input id="pac-input" class="controls form-control" type="text" placeholder="Enter a location">
+    <div id="mapCanvas">
+
+    </div>
     <div id="infowindow-content">
-      <span id="place-name"  class="title"></span><br>
-      Place ID <span id="place-id"></span><br>
+      <span id="place-name"  class="title"></span><br><span id="place-id"></span><br>
       <span id="place-address"></span>
     </div>
     <footer class="marg">
