--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 <!--Carousel Start-->
-<div class="carousel fade-carousel carousel-fade slide" data-ride="carousel" data-interval="4000" id="bs-carousel">
+<div class="carousel fade-carousel carousel-fade slide" data-ride="carousel" data-interval="4000" id="bs-carousel" class="parallax-window" data-parallax="scroll">
   <!-- Overlay -->
   <div class="overlay"></div>
 
@@ -142,6 +142,7 @@
 <br/>
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/parallax.min.js"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
