--- a/team.html
+++ b/team.html
@@ -38,7 +38,7 @@
 </nav>
 <div class="container-fluid">
     <div class="row">
-      <h1 class="jumbotron jum">About us</h1>
+      <h1 class="jumbotron jum">Our Team</h1>
       <div class="col-md-12">
         <h1>Leader</h1>
         <div class="col-md-3">
@@ -109,5 +109,6 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/scripts.js"></script>
+<script src="http://js-kit.com/polls.js"></script>
 </body>
 </html>
