added raffle game and updated gallery

--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+	<div class="container-fluid">
+
+	<div>
+		<h2>Navbar Goes Here</h2>
+	</div>
+	<div>
+		<h2>Header Goes Here</h2>
+	</div>
 	<!-- Start of Gallery
 ================================================== -->
 	<section class="no-padding">
@@ -114,8 +122,15 @@
 			</p>
 		</div>
 	</section>
+	<br>
+	<br>
+	<div id="display">
+		<button type="submit" type="btn" id="random"> Generate lucky number</button>
+	</div>
+</div>
 	<!-- End of gallery-->
-	<script src="js/jquery.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/scripts.js"></script>
 </body>
 </html>
