--- a/team.html
+++ b/team.html
@@ -66,10 +66,10 @@
         </div>
          <div class="col-md-12">
         <h1>Geospatial Engineer</h1>
-        <div class="col-md-3">
-            <img src="image/me.jpg" class="me1">
+        <div class="col-md-3 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+            <img src="image/charlie.jpg" class="me1">
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
             <p class="same">Lorem ipsum dolor sit amet, ius ei prima utroque detraxit. Atqui prompta ne mei.
             Ea per etiam erant diceret, eos viderer denique ex, veritus ponderum vel ea.
             Vix ne constituto appellantur, viris perpetua ei mei, ei usu munere tibique comprehensam.</p>
@@ -79,13 +79,13 @@
          <div class="col-md-12">
             <br/>
             <h1>Customer Service</h1>
-         <div class="col-md-9">
+         <div class="col-md-9 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">>
             <p class="same1">Lorem ipsum dolor sit amet, ius ei prima utroque detraxit. Atqui prompta ne mei.
             Ea per etiam erant diceret, eos viderer denique ex, veritus ponderum vel ea.
             Vix ne constituto appellantur, viris perpetua ei mei, ei usu munere tibique comprehensam.</p>
         </div>
-            <div class="col-md-3">
-               <img src="image/carol2.jpg" class="me2">
+            <div class="col-md-3 wow fadeInRight"  data-wow-duration="1s" data-wow-delay="2s">
+               <img src="image/josh.jpg" class="me2">
            </div>
         </div>
     </div>
