--- a/feature.html
+++ b/feature.html
@@ -98,7 +98,7 @@
             <div class="col-md-4">
                 <a href="#" data-toggle="modal" data-target="#myModal1">
                 <div class="thumbnail vib">
-                    <h1>Nzomo Court</h1>
+                    <h1>Adams Kibanda</h1>
                     <img src="image/mamaoliech.jpg" class="kib">
                     <h2>Location:<a href="#"> Ngong Road</a></h2>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="modal-content">
                       <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title" id="myModalLabel">Mama Oliech</h4>
+                        <h4 class="modal-title" id="myModalLabel">Adams Kibanda</h4>
                       </div>
                       <div class="modal-body">
                         <div class="col-md-4">
@@ -152,14 +152,14 @@
             </div>
             <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="thumbnail vib">
-                    <h1>Kimothos</h1>
+                    <h1>Muchai Kibanda</h1>
                     <img src="image/mamaoliech.jpg" class="kib">
                     <h2>Location:<a href="#"> Westlands</a></h2>
                 </div>
             </div>
             <div class="col-md-4 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
                 <div class="thumbnail vib">
-                    <h1>Milcah Restuarant</h1>
+                    <h1>Ngong Lane KIbanda</h1>
                     <img src="image/mamaoliech.jpg" class="kib">
                     <h2>Location:<a href="#"> Community</a></h2>
                 </div>
