--- a/maps.html
+++ b/maps.html
@@ -5,6 +5,7 @@
     <title>Maps</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main2.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
     <link rel="shortcut icon" href="image/head.png" >
@@ -20,7 +21,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Brand</a>
+          <a class="navbar-brand" href="#"><img src="image/logo.png" class="logo"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
