--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
+	<title>Kibandaski</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-	<!-- <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet"> -->
-	<!-- <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Pangolin" rel="stylesheet"> -->
-	<link href="https://fonts.googleapis.com/css?family=Antic+Slab|Pangolin|Slabo+27px" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Raleway" rel="stylesheet"> 
 	<link rel="shortcut icon" href="image/head.png">
 </head>
 <body>
-	<nav class="navbar navbar-fixed-top colorNav">
+	<nav class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
