--- a/maps.html
+++ b/maps.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/main2.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
     <link rel="shortcut icon" href="image/head.png" >
+    <link rel="stylesheet" href="css/animate.css">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Raleway" rel="stylesheet"> 
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -37,12 +38,12 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <h2 id="kMaps">kibandaski  maps</h2>
+    <h2 id="kMaps" class="wow fadeInDown" data-wow-duration="1s">kibandaski  maps</h2>
     <input id="pac-input" class="controls form-control" type="text" placeholder="Enter a location">
     <div id="mapCanvas">
 
     </div>
-    <div id="infowindow-content">
+    <div id="infowindow-content" class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
       <span id="place-name"  class="title"></span><br><span id="place-id"></span><br>
       <span id="place-address"></span>
     </div>
@@ -66,5 +67,9 @@
     <script src="js/scripts.js" charset="utf-8"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1ENv0vQTNyhcmIOxOewI-NlizlAis48A&libraries=places&callback=initMap"
         async defer></script>
+    <script src="js/wow.min.js"></script>
+<script>
+  new WOW().init();
+</script>
   </body>
 </html>
