--- a/team.html
+++ b/team.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Pacifico" rel="stylesheet">
     <link rel="shortcut icon" href="image/head.png" >
     <link rel="stylesheet" href="css/animate.css">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Raleway" rel="stylesheet"> 
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
