added photos to the featured page

--- a/feature.html
+++ b/feature.html
@@ -97,7 +97,7 @@
                 <a href="#" data-toggle="modal" data-target="#myModal1">
                 <div class="thumbnail vib">
                     <h1>Nzomo Court</h1>
-                    <img src="image/mamaoliech.jpg" class="kib">
+                    <img src="image/k1.jpg" class="kib">
                     <h2>Location:<a href="#"> Ngong Road</a></h2>
                 </div>
                 </a>
@@ -144,21 +144,28 @@
             <div class="col-md-4">
                 <div class="thumbnail vib">
                     <h1>Kimothos</h1>
-                    <img src="image/mamaoliech.jpg" class="kib">
+                    <img src="image/k2.jpg" class="kib">
                     <h2>Location:<a href="#"> Westlands</a></h2>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail vib">
                     <h1>Milcah Restuarant</h1>
-                    <img src="image/mamaoliech.jpg" class="kib">
+                    <img src="image/k3.jpg" class="kib">
                     <h2>Location:<a href="#"> Community</a></h2>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="thumbnail vib">
                     <h1>Mama Oliech</h1>
-                    <img src="image/mamaoliech.jpg" class="kib">
+                    <img src="image/k5.jpg" class="kib">
+                    <h2>Location:<a href="#"> Hurlingham</a></h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail vib">
+                    <h1>Mama Oliech</h1>
+                    <img src="image/k6.jpg" class="kib">
                     <h2>Location:<a href="#"> Hurlingham</a></h2>
                 </div>
             </div>
