--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
   </div>
 </div>
 <!--About us-->
+<div id="clock">
+  <div class="label">Now</div>
+  <div id="current-date"></div>
+  <div id="current-time"></div>
+</div>
 <div class="container-fluid">
     <div class="row">
         <br/>
