links to other pages

--- a/contact.html
+++ b/contact.html
@@ -26,17 +26,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="image/logo.png" class="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="image/logo.png" class="logo"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="trans"> Home</a></li>
-        <li><a href="#" class="trans">Gallery</a></li>
-        <li><a href="#" class="trans">Featured Vibandas</a></li>
-        <li><a href="#" class="trans">Our Team</a></li>
-        <li><a href="#" class="trans">Contact Us</a></li>
+        <li><a href="index.html" class="trans"> Home</a></li>
+        <li><a href="gallery.html" class="trans">Gallery</a></li>
+        <li><a href="feature.html" class="trans">Featured Vibandas</a></li>
+        <li><a href="team.html" class="trans">Our Team</a></li>
+        <li><a href="contact.html" class="trans">Contact Us</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -49,25 +49,25 @@
   <div class="row">
     <div class="col-md-6">
       <div class="" id="fb">
-        <a href="#"><i class="fa fa-facebook fa-4x in me wow fadeInLeft" data-wow-duration="1s"></i></a>
+        <a href="https://www.facebook.com/Kibandaski-Finder-144646036101296/"><i class="fa fa-facebook fa-4x in me wow fadeInLeft" data-wow-duration="1s"></i></a>
       </div>
 
     </div>
     <div class="col-md-6">
       <div class="twitter">
-        <a href="#"><i class="fa fa-twitter fa-4x in wow fadeInRight" data-wow-duration="1s"></i> </a>
+        <a href="https://twitter.com/kibandaski2_0"><i class="fa fa-twitter fa-4x in wow fadeInRight" data-wow-duration="1s"></i> </a>
       </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
       <div class="" id="linkedin">
-        <a href="#"><i class="fa fa-linkedin fa-4x in wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"></i> </a>
+        <a href="https://www.linkedin.com/in/kibandaski-finder-179a06145/"><i class="fa fa-linkedin fa-4x in wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"></i> </a>
       </div>
     </div>
     <div class="col-md-6 wow">
       <div class="pinterest">
-        <a href="#"><i class="fa fa-pinterest fa-4x in wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s"></i> </a>
+        <a href="https://www.pinterest.com/kibandaskifinder/pins/"><i class="fa fa-pinterest fa-4x in wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s"></i> </a>
       </div>
     </div>
   </div>
