--- a/feature.html
+++ b/feature.html
@@ -46,7 +46,7 @@
         <div class="col-md-12  mee">
 
             <div class="col-md-4 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="#" data-toggle="modal" data-target="#myModal">
+                <a href="maps.html" data-toggle="modal" data-target="#myModal">
                 <div class="thumbnail vib">
                     <h1>Mama Oliech</h1>
                     <img src="image/mamaoliech.jpg" class="kib">
