--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,8 @@
 
 <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type"text/javascript" src="js/wow.min.js"></script>
+<script type="text/javascript" src="js/wow.min.js"></script>
+<script src="js/send.js"></script>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 
 
