full webpage update

--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,19 @@
   <link rel="stylesheet" href="css/animate.css">
 </head>
 <!-- Begin MailChimp Signup Form -->
-
-</style>
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/5948e97050fd5105d0c81e76/default';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -37,6 +48,7 @@
         <li><a href="feature.html" class="trans">Featured Vibandas</a></li>
         <li><a href="team.html" class="trans">Our Team</a></li>
         <li><a href="contact.html" class="trans">Contact Us</a></li>
+        <li><a href="maps.html" class="trans">Maps</a></li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
