--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="trans"> Home</a></li>
-        <li><a href="#" class="trans">Gallery</a></li>
-        <li><a href="maps.html" class="trans">Featured Vibandas</a></li>
-        <li><a href="#" class="trans">Our Team</a></li>
-        <li><a href="#" class="trans">Contact Us</a></li>
+        <li><a href="index.html" class="trans"> Home</a></li>
+        <li><a href="gallery.html" class="trans">Gallery</a></li>
+        <li><a href="feature.html" class="trans">Featured Vibandas</a></li>
+        <li><a href="team.html" class="trans">Our Team</a></li>
+        <li><a href="contact.html" class="trans">Contact Us</a></li>
+        <li><a href="maps.html" class="trans">Maps</a></li>
+        
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -99,12 +101,9 @@
                 <h1 class="ab">About Us</h1>
             </div>
             <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="2s">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud e
-                xercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident,
-                sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>We are a team of six people,  we came up with kibandaski finder to assist those in the co-operate sector, locate a nearby clean, affordable restaurant with the right type of food.This is owing to the fact that such restaurants are always in hidden places at the co-operate environment. This in turn will help them save money by spending less on food and getting the right quality of food hence improving their productivity at their various places of work.
+                  we inco-operate top notch technology to ensure your search for a restaurant is effiecient and timely.<br> Enjoy your Quality meals from. <strong>Team Kibandaski</strong>
+                </p>
             </div>
         </div>
     </div>
@@ -125,7 +124,7 @@
                     <h4 class="">Price: Kes100/=</h4>
                 </div>
             </div>
-            <div class="col-md-4 wow fadeInBottom" data-wow-duration="1s" data-wow-delay="1s">>
+            <div class="col-md-4 wow fadeInBottom" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="col-md-6">
                     <img src="image/gith.jpg" class="img">
                 </div>
@@ -134,7 +133,7 @@
                     <h4 class="">Price: Kes60/=</h4>
                 </div>
             </div>
-            <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">>
+            <div class="col-md-4 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="col-md-6">
                     <img src="image/fish.jpg" class="img">
                 </div>
@@ -149,13 +148,17 @@
 <footer class="marg">
    <div id="footer">
       <div class="container">
-        <div class="col-md-6">
+        <div class="col-md-5">
          <p class="muted credit">Made With <i class="fa fa-heart"></i> by kibandaski team</p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-2">
+          &copy;2017
+        </div>
+        <div class="col-md-5">
             <ul class="list-inline text-center">
-                <li><a href="#"><i class="fa fa-facebook fa-2x m"></i></a></li>
-                 <li><a href="#"><i class="fa fa-twitter fa-2x m"></i></a></li>
+                <li><a href="https://www.facebook.com/Kibandaski-Finder-144646036101296/"><i class="fa fa-facebook fa-2x m"></i></a></li>
+                 <li><a href="https://twitter.com/kibandaski2_0"><i class="fa fa-twitter fa-2x m"></i></a></li>
+                 <li><a href="www.pinterest.com/kibandaskifinder/pins/"><i class="fa fa-pinterest fa-2x m"></i></a></li>
                   <li><a href="#"><i class="fa fa-github fa-2x m"></i></a></li>
             </ul>
         </div>
