--- a/team.html
+++ b/team.html
@@ -1,119 +1,146 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kibandaski Finder</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="image/head.png" >
-    <link rel="stylesheet" href="css/animate.css">
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Raleway" rel="stylesheet"> 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kibandaski Finder</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="image/head.png">
+  <link rel="stylesheet" href="css/animate.css">
+  <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Raleway" rel="stylesheet">
 </head>
+
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img src="image/logo.png" class="logo"></a>
-    </div>
+        <a class="navbar-brand" href="index.html"><img src="image/logo.png" class="logo"></a>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" class="trans"> Home</a></li>
-        <li><a href="#" class="trans">Gallery</a></li>
-        <li><a href="#" class="trans">Featured Vibandas</a></li>
-        <li><a href="#" class="trans">Our Team</a></li>
-        <li><a href="#" class="trans">Contact Us</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="container-fluid">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="index.html" class="trans"> Home</a></li>
+          <li><a href="gallery.html" class="trans">Gallery</a></li>
+          <li><a href="feature.html" class="trans">Featured Vibandas</a></li>
+          <li><a href="team.html" class="trans">Our Team</a></li>
+          <li><a href="contact.html" class="trans">Contact Us</a></li>
+          <li><a href="maps.html" class="trans">Maps</a></li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+  <div class="container-fluid">
     <div class="row">
       <h1 class="jumbotron jum">Our Team</h1>
       <div class="col-md-12">
         <h1>Leader</h1>
         <div class="col-md-3 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-            <img src="image/me.jpg" class="me1">
+          <img src="image/me.jpg" class="me1">
         </div>
         <div class="col-md-9 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
-            <p class="same">Lorem ipsum dolor sit amet, ius ei prima utroque detraxit. Atqui prompta ne mei.
-            Ea per etiam erant diceret, eos viderer denique ex, veritus ponderum vel ea.
-            Vix ne constituto appellantur, viris perpetua ei mei, ei usu munere tibique comprehensam.</p>
+          <p class="same"> <strong>Dennis</strong> is an entrepreneur, software engineer and a web developer who has worked with various companies around the world. Is a graduate of the university of Pretoria and Moringa school respectively.
+          </p>
         </div>
         <hr>
       </div>
-        <div class="col-md-12">
-            <br/>
-            <h1>Lead Gallerist</h1>
-         <div class="col-md-9 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
-            <p class="same1">Lorem ipsum dolor sit amet, ius ei prima utroque detraxit. Atqui prompta ne mei.
-            Ea per etiam erant diceret, eos viderer denique ex, veritus ponderum vel ea.
-            Vix ne constituto appellantur, viris perpetua ei mei, ei usu munere tibique comprehensam.</p>
+      <div class="col-md-12">
+        <br/>
+        <h1>Lead Gallerist</h1>
+        <div class="col-md-9 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
+          <p class="same1"> <strong>Caroline Miligo</strong> Our lead Gallerist is a food nutritionist, a software engineer and I.T expert. She has a wealth of experience working with Hotels as a nutrionist and I.T manager.<br> she is a graduate of the university of Michigan and University of Nairobi respectively.
+          </p>
         </div>
-            <div class="col-md-3 wow fadeInRight" data-wow-duration="1s" data-wow-delay="2s">
-               <img src="image/carol2.jpg" class="me2">
-           </div>
+        <div class="col-md-3 wow fadeInRight" data-wow-duration="1s" data-wow-delay="2s">
+          <img src="image/carol2.jpg" class="me2">
         </div>
-         <div class="col-md-12">
+      </div>
+      <div class="col-md-12">
         <h1>Geospatial Engineer</h1>
         <div class="col-md-3 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-            <img src="image/charlie.jpg" class="me1">
+          <img src="image/charlie.jpg" class="me1">
+        </div>
+          <div class="col-md-9 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
+            <p class="same"> <strong>Charlie</strong> Graduated from the university of Oregon, and has worked with various high profile companies around the world. He has worked in Russia, Timbuktu just to mention a few.</p>
+          </div>
+        <hr>
+      </div>
+      <div class="col-md-12">
+        <br/>
+        <h1>Customer Service</h1>
+        <div class="col-md-9 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">
+          <p class="same1"> Our head of customer service <strong>Josh</strong> has worked with alot of companies including airtel, world bank just to mention a few. he is also a consultant with Josh Consultancy limited. Josh is a Degree holder in Business Development.</p>
+        </div>
+        <div class="col-md-3 wow fadeInRight" data-wow-duration="1s" data-wow-delay="2s">
+          <img src="image/josh.jpg" class="me2">
+        </div>
+      </div>
+      <div class="col-md-12">
+        <h1>Front-End</h1>
+        <div class="col-md-3 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+          <img src="image/sam.jpg" class="me1">
         </div>
         <div class="col-md-9 wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
-            <p class="same">Lorem ipsum dolor sit amet, ius ei prima utroque detraxit. Atqui prompta ne mei.
-            Ea per etiam erant diceret, eos viderer denique ex, veritus ponderum vel ea.
-            Vix ne constituto appellantur, viris perpetua ei mei, ei usu munere tibique comprehensam.</p>
+          <p class="same"> <strong>Samuel</strong> is an accountant and front-end developer. Has an experience working in the co-operate sector a graduate of KCA and Moringa school.
+          </p>
         </div>
         <hr>
       </div>
-         <div class="col-md-12">
-            <br/>
-            <h1>Customer Service</h1>
-         <div class="col-md-9 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">>
-            <p class="same1">Lorem ipsum dolor sit amet, ius ei prima utroque detraxit. Atqui prompta ne mei.
-            Ea per etiam erant diceret, eos viderer denique ex, veritus ponderum vel ea.
-            Vix ne constituto appellantur, viris perpetua ei mei, ei usu munere tibique comprehensam.</p>
+      <div class="col-md-12">
+        <br/>
+        <h1> Strategist</h1>
+        <div class="col-md-9 wow fadeInLeft" data-wow-duration="1s" data-wow-delay="2s">>
+          <p class="same1"> Our strategist <strong>Antony</strong> Is a restaurant owner and has experience working with restaurants in the city. He makes sure that we include all the latest vibandas in our database
+          </p>
         </div>
-            <div class="col-md-3 wow fadeInRight"  data-wow-duration="1s" data-wow-delay="2s">
-               <img src="image/josh.jpg" class="me2">
-           </div>
-        </div>
-    </div>
-</div>
-<footer class="marg">
-   <div id="footer">
-      <div class="container">
-        <div class="col-md-6">
-         <p class="muted credit">Made With <i class="fa fa-heart"></i> by kibandaski team</p>
-        </div>
-        <div class="col-md-6">
-            <ul class="list-inline text-center">
-                <li><a href="#"><i class="fa fa-facebook fa-2x m"></i></a></li>
-                 <li><a href="#"><i class="fa fa-twitter fa-2x m"></i></a></li>
-                  <li><a href="#"><i class="fa fa-github fa-2x m"></i></a></li>
-            </ul>
+        <div class="col-md-3 wow fadeInRight" data-wow-duration="1s" data-wow-delay="2s">
+          <img src="image/anto.jpg" class="me2">
         </div>
       </div>
-</div>
-</footer>
-<br/>
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/scripts.js"></script>
-<script src="http://js-kit.com/polls.js"></script>
-<script src="js/wow.min.js"></script>
-<script>
-  new WOW().init();
-</script>
+    </div>
+  </div>
+  <footer class="marg">
+		<div id="footer">
+			<div class="container">
+				<div class="col-md-5">
+					<p class="muted credit">Made With <i class="fa fa-heart"></i> by kibandaski team</p>
+				</div>
+        <div class="col-md-2">
+          &copy;2017
+        </div>
+				<div class="col-md-5">
+					<ul class="list-inline text-center">
+						<li><a href="https://www.facebook.com/Kibandaski-Finder-144646036101296/"><i class="fa fa-facebook fa-2x m"></i></a></li>
+						<li><a href="https://twitter.com/kibandaski2_0"><i class="fa fa-twitter fa-2x m"></i></a></li>
+						<li><a href="www.pinterest.com/kibandaskifinder/pins/"><i class="fa fa-pinterest fa-2x m"></i></a></li>
+						<li><a href="#"><i class="fa fa-github fa-2x m"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+  <br/>
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/scripts.js"></script>
+  <script src="http://js-kit.com/polls.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+
+  </script>
 </body>
+
 </html>
