--- a/gallery.html
+++ b/gallery.html
@@ -19,16 +19,17 @@
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			      </button>
-				<a class="navbar-brand" href="#"><img src="image/logo.png" class="logo"></a>
+				<a class="navbar-brand" href="index.html"><img src="image/logo.png" class="logo"></a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#" class="trans"> Home</a></li>
-					<li><a href="#" class="trans">Gallery</a></li>
-					<li><a href="#" class="trans">Featured Vibandas</a></li>
-					<li><a href="#" class="trans">Our Team</a></li>
-					<li><a href="#" class="trans">Contact Us</a></li>
+					<li><a href="index.html" class="trans"> Home</a></li>
+					<li><a href="gallery.html" class="trans">Gallery</a></li>
+					<li><a href="feature.html" class="trans">Featured Vibandas</a></li>
+					<li><a href="team.html" class="trans">Our Team</a></li>
+					<li><a href="contact.html" class="trans">Contact Us</a></li>
+          <li><a href="maps.html" class="trans">Maps</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -148,13 +149,17 @@
 	<footer class="marg">
 		<div id="footer">
 			<div class="container">
-				<div class="col-md-6">
+				<div class="col-md-5">
 					<p class="muted credit">Made With <i class="fa fa-heart"></i> by kibandaski team</p>
 				</div>
-				<div class="col-md-6">
+        <div class="col-md-2">
+          &copy;2017
+        </div>
+				<div class="col-md-5">
 					<ul class="list-inline text-center">
-						<li><a href="#"><i class="fa fa-facebook fa-2x m"></i></a></li>
-						<li><a href="#"><i class="fa fa-twitter fa-2x m"></i></a></li>
+						<li><a href="https://www.facebook.com/Kibandaski-Finder-144646036101296/"><i class="fa fa-facebook fa-2x m"></i></a></li>
+						<li><a href="https://twitter.com/kibandaski2_0"><i class="fa fa-twitter fa-2x m"></i></a></li>
+						<li><a href="www.pinterest.com/kibandaskifinder/pins/"><i class="fa fa-pinterest fa-2x m"></i></a></li>
 						<li><a href="#"><i class="fa fa-github fa-2x m"></i></a></li>
 					</ul>
 				</div>
