--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="hero">
         <hgroup>
             <h1><img src="image/logo.png" class="ii"></h1>
-            <h3>Kibandaski finder. Your Number 1 local food store locator</h3>
+            <h3 class="heroo">Kibandaski finder. Your Number 1 local food store locator</h3>
         </hgroup>
         <button class="btn btn-hero btn-lg" role="button">Find your nearest Kibanda</button>
       </div>
@@ -68,7 +68,7 @@
       <div class="hero">
         <hgroup>
              <h5><img src="image/saver.png" class="ii"></h5>
-            <h3>Save your daily hustle.</h3>
+            <h3 class="heroo">Save your daily hustle.</h3>
         </hgroup>
         <button class="btn btn-hero btn-lg" role="button">Find your nearest Kibanda</button>
       </div>
@@ -78,7 +78,7 @@
       <div class="hero">
         <hgroup>
             <h5><img src="image/rates.png" class="ii"></h5>
-            <h3>Get best places according to customer reviews</h3>
+            <h3 class="heroo">Get best places according to customer reviews</h3>
         </hgroup>
         <button class="btn btn-hero btn-lg" role="button">Find your nearest Kibanda</button>
       </div>
